@@ -3,13 +3,13 @@ package group.ship.blackshipstore.sevices;
 import group.ship.blackshipstore.dto.response.ItemResponseDto;
 import group.ship.blackshipstore.entity.Item;
 import group.ship.blackshipstore.repositories.ItemRepository;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -17,26 +17,36 @@ public class ItemService {
 
     private final ItemRepository itemRepository;
 
+    private final ModelMapper modelMapper;
+
     @Autowired
-    public ItemService(ItemRepository itemRepository) {
+    public ItemService(ItemRepository itemRepository, ModelMapper modelMapper) {
         this.itemRepository = itemRepository;
+        this.modelMapper = modelMapper;
     }
 
     /*
     Mapping Item entity to ItemDto
      */
-    private final Function<Item, ItemResponseDto> itemDtoFunction = entity -> new ItemResponseDto(entity.getName());
+    private final Function<Item, ItemResponseDto> itemDtoFunction = entity -> {
+        ItemResponseDto itemResponseDto = new ItemResponseDto();
+        itemResponseDto.setId(entity.getId());
+        itemResponseDto.setName(entity.getName());
+//        itemResponseDto.setAttributes(entity.getAttributes());
+//        itemResponseDto.getCategory(entity.getCategory());
+        return itemResponseDto;
+    };
 
     public List<ItemResponseDto> findAll() {
         return itemRepository.findAll().stream()
                 .map(itemDtoFunction)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ItemResponseDto> findAllByCategoryId(Long categoryId) {
         return itemRepository.findAllByCategoryId(categoryId).stream()
                 .map(itemDtoFunction)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ItemResponseDto findById(Long id) {
